--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -196,12 +196,12 @@
                 <tr>
                     <th>No</th>
                     <th>Exam Id</th>
-                    <th>Exam Date & Start - End Time</th>
-                    <th>Exam Day</th>
+                    <th>Start</th>
+                    <th>End</th>
                     <th>Venue</th>
                     <th>Program Code</th>
-                    <th>Course/Section</th>
-                    <th>Pratical Lecturer</th>
+                    <th>Course / Section</th>
+                    <th>Practical Lecturer</th>
                     <th>Tutorial Lecturer</th>
                     <th>No. of Student(s)</th>
                     <th>No. of Invigilator(s)</th>
@@ -212,8 +212,21 @@
                     <tr>
                         <td>{{ loop.index }}</td>
                         <td>[{{ row.examId }}]</td>
-                        <td>{{ row.examStartTime }} - {{ row.examEndTime }}</td>  
-                        <td>{{ row.examStartTime.strftime("%A") }}</td>                  
+
+                        <!-- Start: show Date, Day, Time together -->
+                        <td>
+                            {{ row.examStartTime.strftime("%Y-%m-%d") }} <br>
+                            ({{ row.examStartTime.strftime("%A") }}) <br>
+                            {{ row.examStartTime.strftime("%H:%M") }}
+                        </td>
+
+                        <!-- End: show Date, Day, Time together -->
+                        <td>
+                            {{ row.examEndTime.strftime("%Y-%m-%d") }} <br>
+                            ({{ row.examEndTime.strftime("%A") }}) <br>
+                            {{ row.examEndTime.strftime("%H:%M") }}
+                        </td>
+
                         <td>{{ row.examVenue }}</td>
                         <td>{{ row.course.courseCode }}</td>
                         <td>{{ row.course.courseCodeSection }}</td>
