--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -192,7 +192,7 @@
 
     <div class="user-table-container">
         <table class="user-data-table">
-            <thead>
+            <thead style="width: 100%">
                 <tr>
                     <th>No</th>
                     <th>Exam Id</th>
