--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -4,7 +4,12 @@
 
 <div class="menu-section">
     <h2>Manage Invigilation Report</h2>
-    <div class="profile-frame"></div>
+    <form method="POST">  
+        <h3>Insert Ratio For Each Department to Generate Invigilation Timetable</h3>
+        <label>Check this part, whether each admin able to select for all or just under self</label><br>
+        <lable>Try to display out all the ratio based on the department on that page instead of empty frame</lable><br>
+        <label>Now able to update the ratio, but without the main function to read the lecturers flexibility</label>
+    </form>
 
     <br><br>
     <h3>List of Lecturer Invigilation Report</h3>
@@ -13,12 +18,12 @@
             <thead>
                 <tr>
                     <th>No</th>
-                    <th>Invigilator Name</th>
-                    <th>Department Code</th>
+                    <th>Invigilator [ID] & Name</th>
                     <th>Contact</th>
                     <th>Exam ID</th>
                     <th>Exam Course Code/Section</th>
-                    <th>Exam Time (Start - End)</th>
+                    <th>Exam Start</th>
+                    <th>Exam End</th>
                     <th>Total of Invigilator</th>
                     <th>Check-in Time</th>
                     <th>Check-out Time</th>
@@ -26,23 +31,39 @@
                 </tr>
             </thead>
             <tbody>
-                {% for att in attendances %}
-                <tr>
-                    <td>{{ loop.index }}</td>
-                    <td>{{ att.invigilator.userName }}</td>
-                    <td>{{ att.invigilator.userDepartment }}</td>
-                    <td>{{ att.invigilator.userContact }}</td>
-                    <td>[{{ att.report.exam.examId }}]</td>
-                    <td>{{ att.report.exam.examCourseCodeSection }}</td>
-                    <td>{{ att.report.exam.examStartTime }} - {{ att.report.exam.examEndTime }}</td>
-                    <td>{{ att.report.exam.examNoInvigilator }}</td>
-                    <td>{{ att.checkIn }}</td>
-                    <td>{{ att.checkOut }}</td>
-                    <td>{{ att.remark }}</td>
-                </tr>
+                {% for exam, grouped in attendances|groupby("report.exam.examId") %}
+                    {% set rowspan = grouped|length %}
+                    {% for att in grouped %}
+                        <tr>
+                            <td>{{ loop.index }}</td>
+                            <td>[{{ att.invigilator.userId }}] {{ att.invigilator.userName }}</td>
+                            <td>{{ att.invigilator.userContact }}</td>
+
+                            {% if loop.first %}
+                                <td rowspan="{{ rowspan }}">[{{ att.report.exam.examId }}]</td>
+                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseCodeSection }}</td>
+                                <td rowspan="{{ rowspan }}">
+                                    {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} <br>
+                                    [{{ att.report.exam.examStartTime.strftime("%A") }}] <br>
+                                    {{ att.report.exam.examStartTime.strftime("%H:%M") }}
+                                </td>
+                                <td rowspan="{{ rowspan }}">
+                                    {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>
+                                    [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
+                                    {{ att.report.exam.examEndTime.strftime("%H:%M") }}
+                                </td>
+                                <td rowspan="{{ rowspan }}">{{ att.report.exam.examNoInvigilator }}</td>
+                            {% endif %}
+
+                            <td>{{ att.checkIn }}</td>
+                            <td>{{ att.checkOut }}</td>
+                            <td>{{ att.remark }}</td>
+                        </tr>
+                    {% endfor %}
                 {% endfor %}
             </tbody>
         </table>
+
     </div>
 </div>
 
