--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -18,12 +18,14 @@
             <thead>
                 <tr>
                     <th>Exam ID</th>
-                    <th>Course Code/Section</th>
-                    <th>Course Department</th>
-                    <th>Total of Students</th>
-                    <th>Practical & Tutorial Lecturer</th>
                     <th>Exam Start</th>
                     <th>Exam End</th>
+                    <th>Exam Venue</th>
+                    <th>Course Code/Section</th>
+                    <th>Course Name</th>
+                    <th>Course Department</th>
+                    <th>Practical & Tutorial Lecturer</th>
+                    <th>Total of Students</th>
                     <th>Total of Invigilator</th>
                     <th>Invigilator [ID] & Name</th>
                     <th>Contact</th>
@@ -38,13 +40,6 @@
                         <tr>
                             {% if loop.first %}
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examId }}]</td>
-                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseCodeSection }}</td>
-                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseDepartment }}</td>
-                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseStudent }}</td>
-                                <td rowspan="{{ rowspan }}">
-                                    Practical Lecturer: [{{ att.report.exam.course.coursePractical }}] <br>
-                                    Tutorial Lecturer: [{{ att.report.exam.course.courseTutorial }}]
-                                </td>
                                 <td rowspan="{{ rowspan }}">
                                     {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} <br>
                                     [{{ att.report.exam.examStartTime.strftime("%A") }}] <br>
@@ -55,9 +50,17 @@
                                     [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
                                     {{ att.report.exam.examEndTime.strftime("%H:%M") }}
                                 </td>
+                                <td rowspan="{{ rowspan }}">{{ att.report.exam.examVenue }}</td>
+                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseCodeSection }}</td>
+                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseName }}</td>
+                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseDepartment }}</td>
+                                <td rowspan="{{ rowspan }}">
+                                    Practical Lecturer: [{{ att.report.exam.course.coursePractical.userName }}] <br>
+                                    Tutorial Lecturer: [{{ att.report.exam.course.courseTutorial.userName }}]
+                                </td>
+                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseStudent }}</td>
                                 <td rowspan="{{ rowspan }}">{{ att.report.exam.examNoInvigilator }}</td>
                             {% endif %}
-
                             <td>[{{ att.invigilator.userId }}] {{ att.invigilator.userName }}</td>
                             <td>{{ att.invigilator.userContact }}</td>
                             <td>{{ att.remark }}</td>
