--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -5,10 +5,7 @@
 <div class="menu-section">
     <h2>Manage Invigilation Timetable</h2>    
     <form method="POST">  
-        <h3>Insert Ratio For Each Department to Generate Invigilation Timetable</h3>
-        <label>Check this part, whether each admin able to select for all or just under self</label><br>
-        <lable>Try to display out all the ratio based on the department on that page instead of empty frame</lable><br>
-        <label>Now able to update the ratio, but without the main function to read the lecturers flexibility</label>
+        
     </form>
 
     <br><br>
@@ -57,7 +54,7 @@
                                     Practical Lecturer: <br>[{{ att.report.exam.course.practicalLecturer.userName }}] <br>
                                     Tutorial Lecturer: <br>[{{ att.report.exam.course.tutorialLecturer.userName }}]
                                 </td>
-                                <td rowspan="{{ rowspan }}">{{ att.report.exam.examNoInvigilator }}</td>
+                                <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
                             {% endif %}
                             <td>[{{ att.invigilator.userId }}] {{ att.invigilator.userName }}</td>
                             <td>{{ att.invigilator.userContact }}</td>
