--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -113,7 +113,7 @@
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
                     <td>{{ row.venueNumber }}</td>
                     <td>{{ row.venueFloor }}</td>
-                    <td>{{ row.venueCapacity }}</td>
+                    <td>[{{ row.venueCapacity }}]</td>
                     <td>{{ row.venueStatus }}</td>
                 {% endfor %}
             </tbody>
