--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -177,15 +177,15 @@
             <thead>
                 <tr>
                     <th>No</th>
-                    <th>Id</th>
-                    <th>Name</th>
+                    <th>User ID</th>
+                    <th>Full Name</th>
                     <th>Gender</th>
-                    <th>Email</th>
-                    <th>Contact</th>
-                    <th>Role Based</th>
+                    <th>Email Address</th>
+                    <th>Contact Number</th>
+                    <th>Role Position</th>
                     <th>Department</th>
-                    <th>Status</th> 
-                    <th>Registed Date&Time</th>
+                    <th>Account Status</th> 
+                    <th>Registration Date&Time</th>
                 </tr>
             </thead>
             <tbody>
