--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -179,27 +179,25 @@
             <thead>
                 <tr>
                     <th>No</th>
-                    <th>Course Code</th>
-                    <th>Course Section</th>
+                    <th>Course Code/Section</th>
                     <th>Course Name</th>
                     <th>Credit Hour(s)</th>
-                    <th>Exam Id</th>
-                    <th>Department</th>
+                    <th>Course Department</th>
+                    <th>Exam ID</th>
                     <th>Practical Lecturer</th>
                     <th>Tutorial Lecturer</th>
-                    <th>No. of Students</th>
-                </tr>
+                    <th>Number of Students</th>
+                </tr>   
             </thead>
             <tbody>
                 {% for row in course_data %}
                 <tr>
                     <td>{{ loop.index }}</td>
-                    <td>{{ row.courseCode }}</td>
-                    <td>{{ row.courseSection }}</td>
+                    <td>{{ row.courseCodeSection }}</td>
                     <td>{{ row.courseName }}</td>
                     <td>[{{ row.courseHour }}]</td>
-                    <td>[{{ row.courseExamId }}]</td>
                     <td>{{ row.courseDepartment }}</td>
+                    <td>[{{ row.courseExamId }}]</td>
                     <td>{{ row.practicalLecturer.userName }}</td>
                     <td>{{ row.tutorialLecturer.userName }}</td>
                     <td>[{{ row.courseStudent }}]</td>
