--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -15,17 +15,17 @@
             <thead>
                 <tr>
                     <th>Exam ID</th>
-                    <th>Exam Start</th>
-                    <th>Exam End</th>
-                    <th>Exam Venue</th>
                     <th>Course Code/Section</th>
                     <th>Course Name</th>
                     <th>Course Department</th>
                     <th>Practical & Tutorial Lecturer</th>
-                    <th>Total of Invigilator</th>
-                    <th>Invigilator [ID] & Name</th>
+                    <th>Exam Start Time</th>
+                    <th>Exam End</th>
+                    <th>Exam Venue</th>
+                    <th>Number of Invigilators</th>
+                    <th>Invigilator ID & Name</th>
                     <th>Contact</th>
-                    <th>Status</th>
+                    <th>Attendance Status</th>
                 </tr>
             </thead>
 
@@ -36,17 +36,6 @@
                         <tr>
                             {% if loop.first %}
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examId }}]</td>
-                                <td rowspan="{{ rowspan }}">
-                                    {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} <br>
-                                    [{{ att.report.exam.examStartTime.strftime("%A") }}] <br>
-                                    {{ att.report.exam.examStartTime.strftime("%H:%M") }}
-                                </td>
-                                <td rowspan="{{ rowspan }}">
-                                    {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>
-                                    [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
-                                    {{ att.report.exam.examEndTime.strftime("%H:%M") }}
-                                </td>
-                                <td rowspan="{{ rowspan }}">{{ att.report.exam.examVenue }}</td>
                                 <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseCodeSection }}</td>
                                 <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseName }}</td>
                                 <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseDepartment }}</td>
@@ -54,6 +43,20 @@
                                     P: [{{ att.report.exam.course.practicalLecturer.userName }}] <br>
                                     T: [{{ att.report.exam.course.tutorialLecturer.userName }}]
                                 </td>
+
+                                <td rowspan="{{ rowspan }}">
+                                    {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} <br>
+                                    [{{ att.report.exam.examStartTime.strftime("%A") }}] <br>
+                                    {{ att.report.exam.examStartTime.strftime("%H:%M") }}
+                                </td>
+
+                                <td rowspan="{{ rowspan }}">
+                                    {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>
+                                    [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
+                                    {{ att.report.exam.examEndTime.strftime("%H:%M") }}
+                                </td>
+                                
+                                <td rowspan="{{ rowspan }}">{{ att.report.exam.examVenue }}</td>
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
                             {% endif %}
                             <td>[{{ att.invigilator.userId }}] {{ att.invigilator.userName }}</td>
