--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -22,47 +22,47 @@
         <nav class="sidebar" id="sidebar">
             <div class="tab-nav">
                 <a href="{{ url_for('admin_homepage') }}" class="tab-link {% if active_tab == 'admin_hometab' %}active{% endif %}">
-                    <i class="fas fa-home"></i>
+                    <i class="fas fa-house"></i>
                     <span>Home</span>
                 </a>
                 <a href="{{ url_for('admin_manageCourse') }}" class="tab-link {% if active_tab == 'admin_manageCoursetab' %}active{% endif %}">
-                    <i class="fas fa-book"></i>
+                    <i class="fas fa-book-open"></i>
                     <span>Manage Course (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_manageDepartment') }}" class="tab-link {% if active_tab == 'admin_manageDepartmenttab' %}active{% endif %}">
-                    <i class="fas fa-chalkboard-teacher"></i>
+                    <i class="fas fa-building-columns"></i>
                     <span>Manage Department (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_manageVenue') }}" class="tab-link {% if active_tab == 'admin_manageVenuetab' %}active{% endif %}">
-                    <i class="fas fa-university"></i>
+                    <i class="fas fa-school"></i>
                     <span>Manage Venue (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_manageExam') }}" class="tab-link {% if active_tab == 'admin_manageExamtab' %}active{% endif %}">
-                    <i class="fas fa-file-alt"></i>
+                    <i class="fas fa-clipboard-list"></i>
                     <span>Manage Exam (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_manageStaff') }}" class="tab-link {% if active_tab == 'admin_manageStafftab' %}active{% endif %}">
-                    <i class="fas fa-users"></i>
+                    <i class="fas fa-user-tie"></i>
                     <span>Manage Staff (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_manageTimetable') }}" class="tab-link {% if active_tab == 'admin_manageTimetabletab' %}active{% endif %}">
-                    <i class="fas fa-table"></i>
+                    <i class="fas fa-calendar-days"></i>
                     <span>Manage Timetable (Wait Ms Usha)</span>
                 </a>
                 <a href="{{ url_for('admin_manageInvigilationTimetable') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationTimetabletab' %}active{% endif %}">
-                    <i class="fas fa-calendar-alt"></i>
+                    <i class="fas fa-business-time"></i>
                     <span>Manage Invigilation Timetable (Wait Ms Usha)</span>
                 </a>
                 <a href="{{ url_for('admin_manageInvigilationReport') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationReporttab' %}active{% endif %}">
-                    <i class="fas fa-file"></i>
+                    <i class="fas fa-file-signature"></i>
                     <span>Manage Invigilation Report</span>
                 </a>
                 <a href="{{ url_for('admin_profile') }}" class="tab-link {% if active_tab == 'admin_profiletab' %}active{% endif %}">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-id-badge"></i>
                     <span>Profile (DONE)</span>
                 </a>
                 <a href="{{ url_for('logout') }}" class="logout-btn">
-                    <i class="fas fa-sign-out-alt"></i>
+                    <i class="fas fa-right-from-bracket"></i>
                     <span>Logout</span>
                 </a>
             </div>
