--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -91,13 +91,13 @@
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
                 <div class="form-left">
-                    <label>Exam Start</label>
+                    <label>Exam Start Date & Time</label>
                     <div style="display: flex; gap: 2%;">
                         <input type="date" id="startDate" name="startDate" required>
                         <input type="time" id="startTime" name="startTime" required>
                     </div><br>
 
-                    <label>Exam End</label>
+                    <label>Exam End Date & Time</label>
                     <div style="display: flex; gap: 2%;">
                         <input type="date" id="endDate" name="endDate" required>
                         <input type="time" id="endTime" name="endTime" required>
@@ -133,7 +133,7 @@
                 </div> 
 
                 <div class="form-right">
-                    <label>No. of Students</label>
+                    <label>Number of Students</label>
                     <input type="number" id="student" name="student" readonly><br>
 
                     <label>Venue</label>
@@ -146,8 +146,8 @@
                         {% endfor %}
                     </select><br>
 
-                    <label>No. of Invigilator Need</label>
-                    <input type="number" id="invigilatorNo" name="invigilatorNo" value="{{ invigilatorNo_text }}" required><br>
+                    <label>Number of Invigilators</label>
+                    <input type="number" id="invigilatorNo" name="invigilatorNo" value="{{ invigilatorNo_text }}" min="0" step="1" required><br>
                 </div>
             </div>
 
