--- a/app/templates/admin/adminHomepage.html
+++ b/app/templates/admin/adminHomepage.html
@@ -96,7 +96,7 @@
     </div>
 
     <div class="menu-section">
-        <a href="{{ url_for('admin_Profile')}}" style="text-decoration: none;"><h2>Profile</h2></a>
+        <a href="{{ url_for('admin_profile')}}" style="text-decoration: none;"><h2>Profile</h2></a>
         <li class="submenu">
             <strong>  Purpose:</strong>
             <ul>    
