--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -15,14 +15,11 @@
             <thead>
                 <tr>
                     <th>Exam ID</th>
-                    <th>Course Code/Section</th>
-                    <th>Course Name</th>
+                    <th>Course Details</th>
                     <th>Exam Start Time</th>
                     <th>Exam End Time</th>
-                    <th>Number of Students</th>
                     <th>Number of Invigilators</th>
-                    <th>Invigilator ID & Name</th>
-                    <th>Contact</th>
+                    <th>Invigilator Details/th>
                     <th>Check-in Time</th>
                     <th>Check-out Time</th>
                     <th>Attendance Status</th>
@@ -34,9 +31,12 @@
                     {% for att in grouped %}
                         <tr>
                             {% if loop.first %}
-                                <td rowspan="{{ rowspan }}">[{{ att.report.exam.examId }}]</td>
-                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseCodeSection }}</td>
-                                <td rowspan="{{ rowspan }}">{{ att.report.exam.course.courseName }}</td>
+                                <td>[{{ att.report.exam.examId }}]</td>
+                                <td rowspan="{{ rowspan }}">
+                                    Course Name: {{ att.report.exam.course.courseName }} <br>
+                                    Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
+                                    Number of Students: [{{ att.report.exam.course.courseStudent }}]
+                                </td>
                                 <td rowspan="{{ rowspan }}">
                                     {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} <br>
                                     [{{ att.report.exam.examStartTime.strftime("%A") }}] <br>
@@ -47,16 +47,15 @@
                                     [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
                                     {{ att.report.exam.examEndTime.strftime("%H:%M") }}
                                 </td>
-                                <td rowspan="{{ rowspan }}">[{{ att.report.exam.course.courseStudent }}]</td>
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
                             {% endif %}
 
                             <td rowspan="{ rowspan }">
                                 ID: [{{ att.invigilator.userId }}] <br>
-                                Name: {{ att.invigilator.userName }}
+                                Name: {{ att.invigilator.userName }} <br>
+                                Contact: {{ att.invigilator.userContact }}
                             </td>
                             
-                            <td>{{ att.invigilator.userContact }}</td>
                             <td>{{ att.checkIn }}</td>
                             <td>{{ att.checkOut }}</td>
                             <td>{{ att.remark }}</td>
