--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -57,7 +57,7 @@
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
                             {% endif %}
                             
-                            <td rowspan="{ rowspan }">
+                            <td rowspan="{{ rowspan }}">
                                 ID: [{{ att.invigilator.userId }}] <br>
                                 Name: {{ att.invigilator.userName }} <br>
                                 Contact: {{ att.invigilator.userContact }}
