--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -19,7 +19,7 @@
                     <th>Exam Start Time</th>
                     <th>Exam End Time</th>
                     <th>Number of Invigilators</th>
-                    <th>Invigilator Details/th>
+                    <th>Invigilator Details</th>
                     <th>Check-in Time</th>
                     <th>Check-out Time</th>
                     <th>Attendance Status</th>
