--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -20,7 +20,7 @@
                     <th>Exam End Time</th>
                     <th>Exam Venue</th>
                     <th>Number of Invigilators</th>
-                    <th>Invigilator Details/th>
+                    <th>Invigilator Details</th>
                     <th>Attendance Status</th>
                 </tr>
             </thead>
